--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
     <title>
-    Hello World,dDDdsdsd
+	Jason Choi's Website
     </title>
+	<h1> I really like making websites! </h1>
 <!-- Code injected by live-server -->
 <script type="text/javascript">
 	// <![CDATA[  <-- For SVG support
